<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".4"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/size_180px"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimValue_10"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:src="@drawable/logo">

            </ImageView>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dimValue_15"
                android:layout_marginRight="@dimen/dimValue_15"
                android:layout_weight=".3"
                android:gravity="center|top"
                android:text="@string/tv_description"
                android:textColor="@color/text_color_white"
                android:textSize="@dimen/dimTextSize_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/dimValue_10"
            android:layout_weight=".35"
            android:background="@drawable/border_layout"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimValue_10"
                android:background="@drawable/border_layout"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".1">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_hint_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|top"
                        android:text="@string/login_with_phone_activity_text"
                        android:textColor="@color/text_color_white"
                        android:textSize="@dimen/dimTextSize_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/dimValue_15"
                    android:layout_marginRight="@dimen/dimValue_15"
                    android:layout_weight=".3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/phone_icon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".2"
                        android:background="@color/Submit_btnBg"
                        android:gravity="center"
                        android:textColor="@color/Dark_red"
                        android:textSize="@dimen/dimTextSize_18" />

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".8"
                        android:background="@color/text_color_white"
                        android:clickable="true"
                        android:gravity="left|center"
                        android:hint="@string/login_with_phone_activity_hint_text"
                        android:inputType="phone"
                        android:paddingLeft="@dimen/dimValue_10"
                        android:textColorHint="@color/secondary_text"
                        android:textSize="@dimen/dimTextSize_14" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/dimValue_15"
                    android:layout_marginRight="@dimen/dimValue_15"
                    android:layout_marginTop="@dimen/dimValue_10"
                    android:layout_weight=".3"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_proceed"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/Submit_btnBg"
                        android:gravity="center"
                        android:text="@string/proceed_text"
                        android:textColor="@color/Dark_red"
                        android:textSize="@dimen/dimTextSize_14" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".15">

                </View>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_skipToMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="@dimen/dimValue_10"
                    android:text="@string/skip_to_menu_text"
                    android:textColor="@color/text_color_white"
                    android:textSize="@dimen/dimTextSize_16" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/see_memu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="@dimen/dimValue_10"
                android:layout_weight=".5"
                android:background="@drawable/border_layout_red">

                <TextView
                    android:id="@+id/see_memu_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimsixe_1dp"
                    android:layout_marginLeft="@dimen/dimsixe_1dp"
                    android:layout_marginTop="@dimen/dimsixe_1dp"
                    android:layout_weight=".42"
                    android:gravity="center|right"
                    android:paddingRight="@dimen/dimValue_3"
                    android:textColor="@color/Dark_red"
                    android:textSize="@dimen/dimTextSize_18" />

                <TextView
                    android:id="@+id/tv_see_memu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimsixe_1dp"
                    android:layout_marginRight="@dimen/dimValue_.5"
                    android:layout_marginTop="@dimen/dimsixe_1dp"
                    android:layout_weight=".58"
                    android:gravity="left|center"
                    android:paddingLeft="@dimen/dimValue_5"
                    android:text="@string/see_menu_text"
                    android:textColor="@color/Dark_red"
                    android:textSize="@dimen/dimTextSize_16" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>